--- a/Droppy/Droppy.entitlements
+++ b/Droppy/Droppy.entitlements
@@ -9,5 +9,7 @@
     <true/>
     <key>com.apple.security.files.downloads.read-write</key>
     <true/>
+    <key>com.apple.security.automation.apple-events</key>
+    <true/>
 </dict>
 </plist>
