--- a/Droppy/Info.plist
+++ b/Droppy/Info.plist
@@ -48,5 +48,7 @@
 	</array>
 	<key>NSAppleEventsUsageDescription</key>
 	<string>Droppy needs to communicate with Mail to export email messages when you drag them to the shelf or basket.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Droppy uses Bluetooth to detect when your AirPods connect and display a notification.</string>
 </dict>
 </plist>
