--- a/Droppy/Info.plist
+++ b/Droppy/Info.plist
@@ -50,5 +50,7 @@
 	<string>Droppy needs to communicate with Mail to export email messages when you drag them to the shelf or basket.</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Droppy uses Bluetooth to detect when your AirPods connect and display a notification.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Voice Transcribe needs access to your microphone to record audio for transcription.</string>
 </dict>
 </plist>
