--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,3 +75,28 @@ jobs:
       #     git add Casks/droppy.rb
       #     git commit -m "Update Droppy to v$VERSION"
       #     git push
+      - name: Update Website Docs
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          
+          # Update version.js fallback values
+          # Pattern matches: version: 'X.X.X'
+          sed -i '' "s/version: '.*'/version: '$VERSION'/" docs/assets/js/version.js
+          # Pattern matches: dmgUrl: '.../Droppy-X.X.X.dmg'
+          sed -i '' "s|dmgUrl: '.*'|dmgUrl: 'https://github.com/iordv/Droppy/releases/latest/download/Droppy-$VERSION.dmg'|" docs/assets/js/version.js
+          
+          # Update download.html static link
+          # Pattern matches: href=".../Droppy-X.X.X.dmg"
+          sed -i '' "s|href=\"https://github.com/iordv/Droppy/releases/latest/download/Droppy-.*.dmg\"|href=\"https://github.com/iordv/Droppy/releases/latest/download/Droppy-$VERSION.dmg\"|" docs/download.html
+          
+          # Commit and push changes if meaningful changes exist
+          if [[ -n $(git status -s) ]]; then
+            git add docs/assets/js/version.js docs/download.html
+            git commit -m "Update docs to v$VERSION"
+            git push origin HEAD:main
+          else
+            echo "No changes to commit"
+          fi
