Fix documentation link in issue templates
Changed from droppy.rocks to correct GitHub Pages URL:
https://iordv.github.io/Droppy/

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: 📖 Documentation
-    url: https://droppy.rocks
-    about: Check the Droppy website for features and FAQs
+  - name: 📖 Documentation & Website
+    url: https://iordv.github.io/Droppy/
+    about: Check the Droppy website for features, screenshots, and download
   - name: ☕ Support Droppy
     url: https://buymeacoffee.com/droppy
     about: Buy me a coffee to support development!
