--- a/Droppy/Info.plist
+++ b/Droppy/Info.plist
@@ -47,7 +47,7 @@
 		</dict>
 	</array>
 	<key>NSAppleEventsUsageDescription</key>
-	<string>Droppy needs to communicate with Mail to export email messages when you drag them to the shelf or basket.</string>
+	<string>Droppy needs to communicate with this app to export items when you drag them to the shelf or basket.</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
 	<string>Droppy uses Bluetooth to detect when your AirPods connect and display a notification.</string>
 	<key>NSMicrophoneUsageDescription</key>
