Add Camera extension
- Add the Camera extension implementation (manager, notch view, info view, extension definition) and register it with the extension system/URL scheme.
- Integrate camera behavior into the notch shelf (auto-close handling, media suppression, and optional “keep shelf open” preference).
- Add camera permissions/entitlements and update settings/shop UI, including community badge and local icon asset fallback.
- Add the Camera icon asset to the asset catalog (need a better icon).

--- a/Droppy/Info.plist
+++ b/Droppy/Info.plist
@@ -48,6 +48,8 @@
 	</array>
 	<key>NSAppleEventsUsageDescription</key>
 	<string>Droppy needs to communicate with this app to export items when you drag them to the shelf or basket.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Droppy uses your camera for the Camera extension preview.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Voice Transcribe needs access to your microphone to record audio for transcription.</string>
 	<key>NSBluetoothAlwaysUsageDescription</key>
